chore(qa): only expose java.io