@@ -624,8 +624,6 @@
               </systemPropertyVariables>
               <argLine>
                 --add-opens java.base/java.io=ALL-UNNAMED
-                --add-opens java.base/java.lang=ALL-UNNAMED
-                --add-opens java.base/java.util=ALL-UNNAMED
               </argLine>
             </configuration>
           </plugin>
